--- a/anvil.yaml
+++ b/anvil.yaml
@@ -358,6 +358,9 @@ db_schema:
       admin_ui: {width: 191}
       type: link_single
       target: escalation_type
+    - name: test
+      admin_ui: {width: 200}
+      type: string
   subbrands:
     title: subbrands
     client: none
