--- a/anvil.yaml
+++ b/anvil.yaml
@@ -39,7 +39,7 @@ allow_embedding: false
 name: React DEV - TEST
 runtime_options: {version: 2, client_version: '3', server_version: python3-full, server_spec: null,
   server_persist: true}
-metadata: {logo_img: 'asset:RadaroLogo_CircleBlackLow-noBG-logo.png', title: React,
+metadata: {logo_img: 'asset:RadaroLogo_CircleBlackLow-noBG-logo.png', title: REACT,
   description: 'Radaro reduces your operational costs whilst offering real-time insights
     over your in-house and third-party service providers with unprecedented customer
     insights. Transform your last mile and service delivery, today.'}
@@ -80,11 +80,6 @@ db_schema:
     - name: LastUpdated
       admin_ui: {}
       type: datetime
-  test_table:
-    client: none
-    server: full
-    columns: []
-    title: test table
   escalation_type:
     title: escalation_type
     client: search
@@ -107,72 +102,6 @@ db_schema:
     - name: sysName
       admin_ui: {width: 200}
       type: string
-  files:
-    client: full
-    server: full
-    columns:
-    - name: path
-      type: string
-      admin_ui: {order: 0, width: 200}
-    - name: file
-      type: media
-      admin_ui: {order: 1, width: 200}
-    - name: file_version
-      type: string
-      admin_ui: {order: 2, width: 200}
-    title: Files
-  import_test:
-    title: import_test
-    client: none
-    server: full
-    columns:
-    - name: job_id
-      admin_ui: {width: 200}
-      type: number
-    - name: id
-      admin_ui: {width: 200}
-      type: number
-    - name: customer_name
-      admin_ui: {width: 200}
-      type: string
-    - name: completion_code_id
-      admin_ui: {width: 200}
-      type: number
-    - name: date_created
-      admin_ui: {width: 200}
-      type: datetime
-    - name: last_action_date
-      admin_ui: {width: 200}
-      type: datetime
-    - name: job_reference
-      admin_ui: {width: 200}
-      type: string
-    - name: webhook_merchant_link
-      admin_ui: {width: 200}
-      type: link_single
-      target: merchant
-    - name: job_status
-      admin_ui: {width: 200}
-      type: link_single
-      target: job_status
-    - name: latest_status
-      admin_ui: {width: 200}
-      type: link_single
-      target: escalation_status
-    - name: customer_rating
-      admin_ui: {width: 200}
-      type: number
-    - name: escalation_type
-      admin_ui: {width: 200}
-      type: link_single
-      target: escalation_type
-    - name: job_report
-      admin_ui: {width: 200}
-      type: string
-    - name: latest_asssignee
-      admin_ui: {width: 200}
-      type: link_single
-      target: users
   users:
     title: users
     client: none
