--- a/anvil.yaml
+++ b/anvil.yaml
@@ -102,6 +102,11 @@ db_schema:
     - name: sysName
       admin_ui: {width: 200}
       type: string
+  table_10:
+    client: none
+    server: full
+    columns: []
+    title: Table 10
   users:
     title: users
     client: none
