--- a/anvil.yaml
+++ b/anvil.yaml
@@ -33,6 +33,9 @@ services:
 - source: /runtime/services/anvil/microsoft.yml
   client_config: {}
   server_config: {}
+- source: /runtime/services/anvil/email.yml
+  client_config: {}
+  server_config: {}
 startup: {type: form, module: Homepage}
 package_name: React_DEV___TEST
 allow_embedding: false
