--- a/client_code/Modal_wide/form_template.yaml
+++ b/client_code/Modal_wide/form_template.yaml
@@ -331,7 +331,7 @@ components:
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: 'theme:Filter
           Font', visible: true, text: notify by email, font_size: 12, font: '', spacing_above: small,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
         underline: false, icon: ''}
       name: label_28
       layout_properties: {grid_position: 'SGYDHC,SSSIQM YMXSCI,IBZDCH EPAEXM,ZVVCQF
@@ -404,9 +404,9 @@ components:
       layout_properties: {grid_position: 'SGYDHC,SSSIQM YMXSCI,KHYYGI NJXDUE,GUEMIU',
         full_width_row: false}
     - type: Button
-      properties: {role: null, align: full, tooltip: '', border: '', enabled: true,
+      properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
         foreground: '', visible: true, text: Clear, font_size: 14, font: '', spacing_above: none,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
         underline: false, icon: ''}
       layout_properties: {grid_position: 'SGYDHC,SSSIQM YMXSCI,KHYYGI NJXDUE,TBNMIX',
         full_width_row: false}
