--- a/client_code/Modal_wide/form_template.yaml
+++ b/client_code/Modal_wide/form_template.yaml
@@ -281,7 +281,7 @@ components:
     layout_properties: {grid_position: 'KTJXJG,ZQIEIF'}
     name: label_20
   - type: Button
-    properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
+    properties: {role: null, align: right, tooltip: '', border: '', enabled: true,
       foreground: '', visible: true, text: download pdf, font_size: null, font: '',
       spacing_above: small, icon_align: left, spacing_below: small, italic: false,
       background: '', bold: false, underline: false, icon: ''}
