--- a/client_code/Modal_wide/form_template.yaml
+++ b/client_code/Modal_wide/form_template.yaml
@@ -413,11 +413,11 @@ components:
       layout_properties: {grid_position: 'SGYDHC,SSSIQM YMXSCI,KHYYGI NJXDUE,GUEMIU',
         full_width_row: false}
     - type: Link
-      properties: {role: filter-button, url: '', align: center, tooltip: '', border: '',
-        foreground: 'theme:Filter Font', visible: true, text: Clear, font_size: null,
-        wrap_on: never, font: '', col_spacing: medium, spacing_above: small, icon_align: left,
-        col_widths: '', spacing_below: none, italic: false, background: '', bold: false,
-        underline: false, icon: ''}
+      properties: {role: null, url: '', align: center, tooltip: '', border: '', foreground: 'theme:Filter
+          Font', visible: true, text: Clear, font_size: 12, wrap_on: never, font: '',
+        col_spacing: medium, spacing_above: none, icon_align: left, col_widths: '',
+        spacing_below: none, italic: false, background: '', bold: false, underline: false,
+        icon: ''}
       name: link_3
       layout_properties: {grid_position: 'SGYDHC,SSSIQM YMXSCI,KHYYGI NJXDUE,QHQJEG',
         full_width_row: false}
