Created InProgress.png; Edited ServerModule1

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -29,6 +29,7 @@ unique_ids:
     jbh.png: '1689822039387109455246945.68797'
     standard-page.html: GMPM3KEVMDU4OOJNM5N7GZETSM3G5FAX
     RadaroLogo_CircleBlackLow-noBG.png: '1692924995648301698256708.2134'
+    InProgress.png: '1700194826941437432035647.652'
     Star filled.png: '1690342439494325066670921.82104'
     map-header-background-1920x1080 2x.png: '1693537117500697531121728.9857'
     Star 1.png: '1690342429864212008225367.0068'
