--- a/client_code/Modal_pdf/form_template.yaml
+++ b/client_code/Modal_pdf/form_template.yaml
@@ -4,13 +4,20 @@ properties: []
 container:
   type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: mobile, col_spacing: none, spacing_above: small, col_widths: '{"XBLDEN":30}',
+    wrap_on: mobile, col_spacing: none, spacing_above: small, col_widths: '{"XBLDEN":50,"ZKDTUX":25}',
     spacing_below: small, background: ''}
 components:
+- type: Image
+  properties: {role: null, vertical_align: center, height: 26, tooltip: '', border: '',
+    foreground: '', visible: true, display_mode: shrink_to_fit, spacing_above: small,
+    source: _/theme/RadaroLogo_BlackHigh.png, spacing_below: small, background: '',
+    horizontal_align: left}
+  name: image_2
+  layout_properties: {grid_position: 'TLMXSN,ZKDTUX'}
 - type: Label
-  properties: {role: title, align: center, tooltip: '', border: '', foreground: '',
+  properties: {role: title, align: left, tooltip: '', border: '', foreground: '',
     visible: true, text: '', font_size: null, font: '', spacing_above: none, icon_align: left,
-    spacing_below: none, italic: false, background: '', bold: false, underline: false,
+    spacing_below: medium, italic: false, background: '', bold: false, underline: false,
     icon: ''}
   name: title
   layout_properties: {grid_position: 'TLMXSN,XBLDEN'}
