--- a/client_code/Reporting/form_template.yaml
+++ b/client_code/Reporting/form_template.yaml
@@ -251,7 +251,7 @@ components:
     components:
     - type: Label
       properties: {role: null, align: center, tooltip: '', border: '', foreground: 'theme:Font',
-        visible: true, text: Responses by User all time, font_size: null, font: '',
+        visible: true, text: Responses by User (coming soon), font_size: null, font: '',
         spacing_above: none, icon_align: left, spacing_below: none, italic: false,
         background: '', bold: true, underline: false, icon: ''}
       name: label_2
