--- a/client_code/Modal_wide/form_template.yaml
+++ b/client_code/Modal_wide/form_template.yaml
@@ -268,6 +268,22 @@ components:
       data_bindings:
       - {code: 'self.item[''webhook_merchant_link''][''name'']', property: text}
       name: label_25
+    - type: Label
+      properties: {role: null, align: right, tooltip: '', border: '', foreground: 'theme:Filter
+          Font', visible: true, text: 'Customer Comment :', font_size: 14, font: '',
+        spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+        background: '', bold: false, underline: false, icon: ''}
+      name: label_29
+      layout_properties: {row: THQKJA, width_xs: 2, col_xs: 0, width: 115.656}
+    - type: Label
+      properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+        visible: true, text: '', font_size: 14, font: '', spacing_above: small, icon_align: left,
+        spacing_below: small, italic: false, background: '', bold: false, underline: false,
+        icon: ''}
+      name: label_2
+      layout_properties: {row: THQKJA, width_xs: 8, col_xs: 2, width: 552.656}
+      data_bindings:
+      - {property: text, code: 'self.item[''comment'']'}
   - type: Label
     properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
       visible: true, text: Add Comment, font_size: 14, font: '', spacing_above: small,
