--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -7,7 +7,7 @@ components:
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
     wrap_on: never, col_spacing: medium, spacing_above: none, col_widths: '{}', spacing_below: none,
     background: ''}
-  layout_properties: {slot: filterpanel1}
+  layout_properties: {slot: filterpanel}
   name: filterpanel
   components:
   - type: GridPanel
