--- a/client_code/CMS/form_template.yaml
+++ b/client_code/CMS/form_template.yaml
@@ -74,7 +74,7 @@ components:
         layout_properties: {}
       - type: Button
         properties: {role: null, align: left, tooltip: '', border: '', enabled: false,
-          foreground: '', visible: false, text: DB_update, font_size: null, font: '',
+          foreground: '', visible: true, text: DB_update, font_size: null, font: '',
           spacing_above: small, icon_align: left, spacing_below: small, italic: false,
           background: '', bold: false, underline: false, icon: ''}
         name: button_1
