--- a/client_code/CMS/form_template.yaml
+++ b/client_code/CMS/form_template.yaml
@@ -73,7 +73,7 @@ components:
         name: repeating_panel_1
         layout_properties: {}
       - type: Button
-        properties: {role: null, align: left, tooltip: '', border: '', enabled: false,
+        properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
           foreground: '', visible: true, text: DB_update, font_size: null, font: '',
           spacing_above: small, icon_align: left, spacing_below: small, italic: false,
           background: '', bold: false, underline: false, icon: ''}
