--- a/anvil.yaml
+++ b/anvil.yaml
@@ -320,13 +320,13 @@ db_schema:
       admin_ui: {width: 200}
       type: string
     - name: ID
-      admin_ui: {width: 200}
+      admin_ui: {order: -1, width: 200}
       type: string
     - name: Logo
       admin_ui: {width: 200}
       type: string
     - name: Name
-      admin_ui: {width: 200}
+      admin_ui: {order: -2, width: 200}
       type: string
     - name: Server
       admin_ui: {width: 200}
