Created BSR_Group.png; Edited settings

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -21,6 +21,7 @@ unique_ids:
     RadaroLogo_CircleBlackLow-noBG-logo.png: '1692925008899659940331929.7946'
     theme.css: OGFNOPXCPEXK6NN4XFYKC2MLE3QBBHDG
     React.png: '1693537069271117151613358.35434'
+    BSR_Group.png: '1717292981113182698702588.62863'
     Electrolux.png: '1689822058367482418863446.6455'
     Star outline.png: '1690348751854896416192445.363'
     comment.png: '168913302064741437623884.82086'
