--- a/anvil.yaml
+++ b/anvil.yaml
@@ -323,7 +323,7 @@ db_schema:
       admin_ui: {order: -1, width: 200}
       type: string
     - name: Logo
-      admin_ui: {width: 200}
+      admin_ui: {order: 2, width: 273}
       type: string
     - name: Name
       admin_ui: {order: -2, width: 200}
