--- a/client_code/Modal_wide/form_template.yaml
+++ b/client_code/Modal_wide/form_template.yaml
@@ -270,7 +270,7 @@ components:
       name: label_25
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: 'theme:Filter
-          Font', visible: true, text: 'Customer Comment :', font_size: 14, font: '',
+          Font', visible: true, text: 'Escalation Comment :', font_size: 14, font: '',
         spacing_above: small, icon_align: left, spacing_below: small, italic: false,
         background: '', bold: false, underline: false, icon: ''}
       name: label_29
