--- a/client_code/CMS/form_template.yaml
+++ b/client_code/CMS/form_template.yaml
@@ -4,38 +4,26 @@ container:
   properties: {html: '@theme:standard-page.html'}
 components:
 - type: ColumnPanel
-  properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: never, col_spacing: tiny, spacing_above: none, col_widths: '{}', spacing_below: none,
-    background: ''}
+  properties: {role: null, tooltip: '', border: '', foreground: '', visible: true, wrap_on: never, col_spacing: tiny, spacing_above: none, col_widths: '{}', spacing_below: none, background: ''}
   name: content_panel
   layout_properties: {slot: default}
   components:
   - type: XYPanel
-    properties: {role: null, width: null, align: center, height: 20, tooltip: '',
-      border: '', foreground: '', visible: true, spacing_above: small, spacing_below: medium,
-      background: ''}
+    properties: {role: null, width: null, align: center, height: 20, tooltip: '', border: '', foreground: '', visible: true, spacing_above: small, spacing_below: medium, background: ''}
     name: xy_panel_1
     layout_properties: {grid_position: 'LQWXWB,FJNGZG'}
     components:
     - type: Label
-      properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
-        visible: true, text: Merchant Portal set up, font_size: null, font: '', spacing_above: small,
-        icon_align: left, spacing_below: none, italic: false, background: '', bold: true,
-        underline: false, icon: ''}
+      properties: {role: null, align: center, tooltip: '', border: '', foreground: '', visible: true, text: Merchant Portal set up, font_size: null, font: '', spacing_above: small, icon_align: left, spacing_below: none, italic: false, background: '', bold: true, underline: false, icon: ''}
       name: label_1
-      layout_properties: {grid_position: 'HNIQTX,ZWSVKL', x: 0, y: 2.1562000000000126,
-        width: 742.672}
+      layout_properties: {grid_position: 'HNIQTX,ZWSVKL', x: 0, y: 2.1562000000000126, width: 742.672}
     - type: Button
-      properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
-        foreground: '', visible: true, text: back, font_size: null, font: '', spacing_above: small,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-        underline: false, icon: 'fa:angle-left'}
+      properties: {role: null, align: left, tooltip: '', border: '', enabled: true, foreground: '', visible: true, text: back, font_size: null, font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false, background: '', bold: false, underline: false, icon: 'fa:angle-left'}
       name: Dashboard
       layout_properties: {grid_position: 'HNIQTX,LXRVGT', x: 0, y: 5, width: 96}
       event_bindings: {click: Dashboard_click}
   - type: GridPanel
-    properties: {spacing_above: none, spacing_below: none, background: '', foreground: '',
-      border: '', visible: true, role: null, tooltip: ''}
+    properties: {spacing_above: none, spacing_below: none, background: '', foreground: '', border: '', visible: true, role: null, tooltip: ''}
     name: grid_panel_1
     layout_properties: {grid_position: 'BTMFSC,TLHRIM', full_width_row: true}
     components:
@@ -43,16 +31,11 @@ components:
       properties:
         role: null
         columns:
-        - {id: ECSLIN, title: Merchant name, data_key: name, $$hashKey: 'object:6799',
-          width: '200', expand: false}
-        - {id: MBQKBP, title: Completion Codes, data_key: completion_code_enabled,
-          $$hashKey: 'object:6871', width: 93, expand: false}
-        - {id: YZDWXM, title: Fail Codes, data_key: fail_code_enabled, $$hashKey: 'object:288',
-          width: '90'}
-        - {id: VHZCVW, title: Low Rating, data_key: low_rating_enabled, $$hashKey: 'object:6873',
-          width: 90, expand: false}
-        - {id: DNDWUT, title: Low Rating Threshold, data_key: rating_threshold, $$hashKey: 'object:6875',
-          width: 97, expand: false}
+        - {id: ECSLIN, title: Merchant name, data_key: name, $$hashKey: 'object:6799', width: '200', expand: false}
+        - {id: MBQKBP, title: Completion Codes, data_key: completion_code_enabled, $$hashKey: 'object:6871', width: 93, expand: false}
+        - {id: YZDWXM, title: Fail Codes, data_key: fail_code_enabled, $$hashKey: 'object:288', width: '90'}
+        - {id: VHZCVW, title: Low Rating, data_key: low_rating_enabled, $$hashKey: 'object:6873', width: 90, expand: false}
+        - {id: DNDWUT, title: Low Rating Threshold, data_key: rating_threshold, $$hashKey: 'object:6875', width: 97, expand: false}
         auto_header: true
         tooltip: ''
         border: ''
@@ -65,18 +48,14 @@ components:
         spacing_below: none
         background: ''
       name: data_grid_1
-      layout_properties: {grid_position: 'UZACMG,ZBGFGT', row: DIWYFL, width_xs: 12,
-        col_xs: 0, width: 674}
+      layout_properties: {grid_position: 'UZACMG,ZBGFGT', row: DIWYFL, width_xs: 12, col_xs: 0, width: 674}
       components:
       - type: RepeatingPanel
         properties: {spacing_above: none, spacing_below: none, item_template: CMS.RowTemplate4}
         name: repeating_panel_1
         layout_properties: {}
       - type: Button
-        properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
-          foreground: '', visible: true, text: DB_update, font_size: null, font: '',
-          spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-          background: '', bold: false, underline: false, icon: ''}
+        properties: {role: null, align: left, tooltip: '', border: '', enabled: true, foreground: '', visible: true, text: DB_update, font_size: null, font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false, background: '', bold: false, underline: false, icon: ''}
         name: button_1
         layout_properties: {slot: footer}
         event_bindings: {click: dbUpdateButton_click}
