--- a/anvil.yaml
+++ b/anvil.yaml
@@ -211,7 +211,7 @@ db_schema:
       admin_ui: {width: 200}
       type: datetime
     - name: MerchantLink
-      admin_ui: {width: 200}
+      admin_ui: {order: 1, width: 200}
       type: link_single
       target: merchant
   merchant:
