--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -572,7 +572,7 @@ components:
       name: outlined_card_1
       components:
       - type: Image
-        properties: {role: elevated-button, vertical_align: center, spacing_above: small, background: '', horizontal_align: center, source: _/theme/Your%20Logo.jpg, foreground: '', display_mode: shrink_to_fit, spacing_below: small, visible: true, border: '', tooltip: '', height: 44}
+        properties: {role: elevated-button, vertical_align: center, alt_text: '', spacing_above: small, background: '', horizontal_align: center, source: _/theme/Your%20Logo.jpg, foreground: '', display_mode: shrink_to_fit, spacing_below: small, visible: true, border: '', tooltip: '', height: 44}
         layout_properties: {row: BTNFSF, width_xs: 3, col_xs: 9, width: 229, grid_position: 'AVJIEH,LHHCLH', full_width_row: false}
         name: image_2
 - type: FileLoader
